# better-to-pc-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  vcpkg.json
.cache/clangd/index/: ClearTemp.h.C235FE763A3B84B8.idx  ComFunctions.cpp.E7FDE35AAE1C84CC.idx  ComFunctions.h.1330082A0ADD4A5D.idx  Communication.cpp.EA7861FFB46219EA.idx  Communication.h.BF6917770764D65D.idx  EmptyToastHandler.h.32B2E960E9D752F9.idx  FileBatch.cpp.3C08EDC7BA383B63.idx  FileBatch.h.BC50BE2864A9A3FF.idx  FileHelper.h.4048DA9F583653BA.idx  Gui.cpp.DA916C263CC7B67B.idx  Gui.h.376C94B97D4149B2.idx  MultiFileToastHandler.h.DA0A237AC28633C7.idx  QR.h.4CC113D851108498.idx  Resources.cpp.F91A9CE95434ECD6.idx  Resources.h.78F091E6DEFA5865.idx  SecurityToastHandler.h.8F316C63234E1CA5.idx  Server.cpp.1F190B197EBE6C2B.idx  Server.h.9B43B34F13DE24AE.idx  ServerHandler.cpp.C9954305E8680511.idx  ServerHandler.h.B9AEDE2119F0FBE1.idx  Settings.h.E8BF5EC25CF076B3.idx  SingleFileToastHandler.h.C7900785725D0F9A.idx  StringHelper.cpp.60290A781D810163.idx  StringHelper.h.156A6584846BDFBC.idx  TempFile.cpp.FEC71809F9F4387E.idx  TempFile.h.D29D3715ABA66EED.idx  Theme.h.9BADB7B82207C5A3.idx  Toast.cpp.6B1F253C441386B1.idx  Toast.h.E653C44233F56956.idx  Trys.cpp.59A80E05494E1E9E.idx  Trys.h.81365B57FBCB3F95.idx  Window.h.D666C7D3A1402EBC.idx  button.cpp.A70273549B710375.idx  button.hpp.9F2B8BFDCF5B70F1.idx  com.pb.cc.FB97133A06F0D630.idx  com.pb.h.0FA749BB0ACFEBEA.idx  entry.cpp.689753B332F4D3F4.idx  entry.hpp.58D63DDBA79CCAB1.idx  icon.cpp.51EA4FB28A7C6494.idx  icon.cpp.9DC345A66A46A7A9.idx  (+27 more)
resources/templates/image/: index.html
resources/templates/plain/: index.html
resources/templates/qr/: index.html
src/: ClearTemp.h  ComFunctions.cpp  ComFunctions.h  Communication.cpp  Communication.h  EmptyToastHandler.h  FileBatch.cpp  FileBatch.h  FileHelper.h  Gui.cpp  Gui.h  MultiFileToastHandler.h  QR.h  Resources.cpp  Resources.h  Resources.rc  SecurityToastHandler.h  Server.cpp  Server.h  ServerHandler.cpp  ServerHandler.h  Settings.h  SingleFileToastHandler.h  StringHelper.cpp  StringHelper.h  TempFile.cpp  TempFile.h  Theme.h  Toast.cpp  Toast.h  Trys.cpp  Trys.h  Window.h  com.pb.cc  com.pb.h  main.cpp  targetver.h
